# flowgger

./: .dockerignore  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  appveyor.yml  build.rs  flowger.toml  flowgger.toml  record.capnp  rustfmt.toml
.github/workflows/: ci.yml
ci/: before_deploy.ps1  before_deploy.sh  install.sh  script.sh  utils.sh
docker/: 10-keepalive.conf  Dockerfile  entrypoint.sh  flowgger.sh  flowgger.toml.in
src/: cli.yml  lib.rs  main.rs  record_capnp.rs
src/flowgger/: config.rs  fuzzer.rs  gelf.rs  gelf_decoder.rs  gelf_encoder.rs  kafkapool.rs  ltsv.rs  ltsv_decoder.rs  mod.rs  record.capnp  record.rs  record_capnp.rs  rfc5424.rs  rfc5424_decoder.rs  tcpinput.rs  test_fuzzer.rs  tlsinput.rs
src/flowgger/decoder/: gelf_decoder.rs  invalid_decoder.rs  ltsv_decoder.rs  mod.rs  rfc3164_decoder.rs  rfc5424_decoder.rs
src/flowgger/encoder/: capnp_encoder.rs  gelf_encoder.rs  ltsv_encoder.rs  mod.rs  passthrough_encoder.rs  rfc3164_encoder.rs  rfc5424_encoder.rs
src/flowgger/input/: mod.rs  redis_input.rs  stdin_input.rs  tcp_input.rs  tls_common.rs  tls_input.rs  tlsco_input.rs  udp_input.rs
src/flowgger/input/file/: discovery.rs  mod.rs  worker.rs
src/flowgger/input/tcp/: mod.rs  tcp_input.rs  tcpco_input.rs
src/flowgger/input/tls/: common.rs  mod.rs  tls_input.rs  tlsco_input.rs
src/flowgger/merger/: line_merger.rs  mod.rs  nul_merger.rs  syslen_merger.rs
src/flowgger/output/: debug_output.rs  file_output.rs  kafka_output.rs  kafkapool.rs  mod.rs  tls_output.rs
src/flowgger/splitter/: capnp_splitter.rs  line_splitter.rs  mod.rs  nul_splitter.rs  syslen_splitter.rs
src/flowgger/utils/: mod.rs  rotating_file.rs  test_utils.rs
tests/: fuzzer.rs
tests/resources/: bad_config.toml  good_config.toml
