[package]
edition = "2018"
name = "flowgger"
version = "0.2.6"
authors = ["Frank Denis <github@pureftpd.org>"]
build = "build.rs"

[features]
capnp-recompile = ["capnpc"]
coroutines = ["coio"]
default = ["kafka"]

[build-dependencies.capnpc]
version = "*"
optional = true

[dependencies]
capnp = "0.9"
chrono = "0.4"
clap = "2"
flate2 = "1.0"
log = "0.4"
rand = "0.5"
redis = "0.10"
serde = "1"
serde_json = "~0.8"
toml = "0.2"

[dependencies.coio]
git = "https://github.com/zonyitoo/coio-rs"
optional = true

[dependencies.kafka]
version = "0.7"
features = ["snappy", "gzip", "security"]
optional = true

[dependencies.openssl]
version = "~0.9"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
panic = "abort"
