[package]
edition = "2018"
name = "flowgger"
version = "0.2.8"
authors = ["Frank Denis <github@pureftpd.org>", "Matteo Bigoi <bigo@crisidev.org>", "Vivien Chene <viv.chene@gmail.com>"]
build = "build.rs"

[[bin]]
name = "flowgger"
path = "src/main.rs"

[lib]
name = "flowgger"
path = "src/lib.rs"

[features]
capnp-recompile = ["capnpc", "capnp"]
coroutines = ["coio", "tls"]
default = ["syslog", "kafka-output", "file", "redis", "capnp-recompile", "tls", "gelf", "ltsv"]
redis-input = ["redis"]
kafka-output = ["kafka"]
tls = ["openssl"]
gelf = ["serde", "serde_json"]
ltsv = []
syslog = ["rfc5424", "rfc3164"]
rfc3164=[]
rfc5424=[]
file = ["notify", "glob"]

[build-dependencies.capnpc]
version = "*"
optional = true

[dependencies]
capnp = { version = "0.9", optional = true }
chrono = "0.4"
clap = "2"
coio = { git = "https://github.com/zonyitoo/coio-rs", optional = true }
flate2 = "1.0"
glob = { version = "0.3", optional = true }
kafka = { version = "0.7", features = ["snappy", "gzip", "security"], optional = true }
log = "0.4"
notify = { version = "4.0", optional = true }
openssl = { version = "~0.9", optional = true }
rand = "0.5"
redis = { version = "0.10", optional = true }
serde = { version = "1", optional = true }
serde_json = { version = "~0.8", optional = true }
toml = "0.2"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
panic = "abort"
