[package]
edition = "2018"
name = "flowgger"
version = "0.2.11"
authors = ["Frank Denis <github@pureftpd.org>", "Matteo Bigoi <bigo@crisidev.org>", "Vivien Chene <viv.chene@gmail.com>", "Francesco Berni <kurojishi@kurojishi.me>"]
build = "build.rs"
repository = "https://github.com/awslabs/flowgger"
description = "Flowgger is a fast, simple and lightweight data collector."
license = "ISC"
documentation="https://github.com/awslabs/flowgger/wiki"

[[bin]]
name = "flowgger"
path = "src/main.rs"

[lib]
name = "flowgger"
path = "src/lib.rs"

[features]
capnp-recompile = ["capnpc", "capnp"]
coroutines = ["may", "tls"]
default = ["syslog", "kafka-output", "file", "redis", "capnp-recompile", "tls", "gelf", "ltsv"]
redis-input = ["redis"]
kafka-output = ["kafka"]
tls = ["openssl"]
gelf = ["serde", "serde_json"]
ltsv = []
syslog = ["rfc5424", "rfc3164", "passthrough"]
rfc3164=[]
rfc5424=[]
passthrough=[]
file = ["notify", "glob"]

[build-dependencies.capnpc]
version = "0.10"
optional = true

[dependencies]
capnp = { version = "0.10", optional = true }
chrono = "0.4"
chrono-tz = "0.5"
clap = "2"
flate2 = "1"
glob = { version = "0.3", optional = true }
kafka = { version = "0.8", features = ["snappy", "gzip", "security"], optional = true }
log = "0.4"
notify = { version = "4.0", optional = true }
openssl = { version = "~0.10", optional = true }
rand = "0.5"
redis = { version = "0.10", optional = true }
serde = { version = "1", optional = true }
serde_json = { version = "~0.8", optional = true }
may = { version = "~0.3", optional = true }
toml = "0.5"
time = "0.1"

[dev-dependencies]
tempdir = "0.3"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
panic = "abort"
